k8s/www/www-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: www
  name: www
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: www
status:
  loadBalancer: {}
